# opensearch-proxy

./: .gitignore  AGENTS.md  Cargo.toml  NOTICE  README.md  clippy.toml  deny.toml  rust-toolchain.toml
.claude/agents/: quality-reviewer.md
.claude/commands/: quality-review.md
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  docs.yml  quality-review.yml  release.yml
crates/osproxy-bench/: Cargo.toml
crates/osproxy-bench/src/: footprint.rs  footprint_tests.rs  judge.rs  judge_tests.rs  lib.rs  profile.rs  profile_tests.rs  report.rs  report_tests.rs  scale.rs  scale_tests.rs  summary.rs  summary_tests.rs
crates/osproxy-capture/: Cargo.toml
crates/osproxy-capture/src/: lib.rs
crates/osproxy-config/: Cargo.toml
crates/osproxy-config/src/: lib.rs  raw.rs  resolve.rs
crates/osproxy-config/src/resolve/: resolve_capture.rs
crates/osproxy-config/tests/: fanout.rs  load.rs
crates/osproxy-control/: Cargo.toml
crates/osproxy-control/src/: affinity.rs  lib.rs  migration.rs
crates/osproxy-control/tests/: affinity.rs  control_plane.rs
crates/osproxy-core/: Cargo.toml
crates/osproxy-core/benches/: core_bench.rs
crates/osproxy-core/src/: cursor.rs  cursor_tests.rs  endpoint.rs  error.rs  ids.rs  json.rs  json_tests.rs  lib.rs  target.rs  time.rs  trace.rs  trace_tests.rs
crates/osproxy-core/tests/: memory.rs  properties.rs
crates/osproxy-engine/: Cargo.toml
crates/osproxy-engine/benches/: search_transform.rs
crates/osproxy-engine/src/: admin.rs  asyncwrite.rs  bulk.rs  bulkline.rs  bulkprep.rs  cursor.rs  dbq.rs  endpoints.rs  error.rs  lib.rs  mget.rs  msearch.rs  observe.rs  passthrough.rs  pipeline.rs  pipeline_async_tests.rs  pipeline_tests.rs  pit.rs  plan.rs  read.rs  read_tests.rs  retry.rs  search_scan.rs  search_scan_tests.rs  search_stream.rs  search_stream_tests.rs
crates/osproxy-engine/tests/: admin_passthrough.rs  backend_retry.rs  blind_diagnosis.rs  bulk.rs  bulk_gate.rs  cursor_affinity.rs  custom_router.rs  fault_injection.rs  memory.rs  mget.rs  migration_gate.rs  msearch.rs  otlp_export.rs  read_path.rs  round_trip.rs  write_path.rs
crates/osproxy-etcd/: Cargo.toml
crates/osproxy-etcd/src/: lib.rs  lib_tests.rs  watch.rs
crates/osproxy-etcd/tests/: etcd_live.rs
crates/osproxy-kafka/: Cargo.toml
crates/osproxy-kafka-krafka/: Cargo.toml
crates/osproxy-kafka-krafka/src/: lib.rs
crates/osproxy-kafka-rdkafka/: Cargo.toml  README.md
crates/osproxy-kafka-rdkafka/src/: lib.rs
crates/osproxy-kafka-rskafka/: Cargo.toml
crates/osproxy-kafka-rskafka/src/: lib.rs
crates/osproxy-kafka-wal/: Cargo.toml
crates/osproxy-kafka-wal/src/: lib.rs  segment.rs  wal_tests.rs
crates/osproxy-kafka/src/: lib.rs
crates/osproxy-observe/: Cargo.toml
crates/osproxy-observe/benches/: directive.rs
crates/osproxy-observe/src/: breakglass.rs  breakglass_tests.rs  decode.rs  decode_tests.rs  diagnostic_sink.rs  directive.rs  directive_tests.rs  explain.rs  export.rs  lib.rs  otlp.rs  stats.rs  stats_tests.rs  store.rs  store_tests.rs  trace.rs
crates/osproxy-observe/tests/: contention.rs  memory.rs  no_value_leak.rs
crates/osproxy-otlp/: Cargo.toml
crates/osproxy-otlp/src/: lib.rs
crates/osproxy-otlp/tests/: export.rs
crates/osproxy-rewrite/: Cargo.toml
crates/osproxy-rewrite/benches/: hot_paths.rs
crates/osproxy-rewrite/src/: bulk.rs  error.rs  extract.rs  fields.rs  id.rs  lib.rs  mget.rs  msearch.rs  query.rs
crates/osproxy-rewrite/tests/: memory.rs  streaming.rs  symmetry.rs
crates/osproxy-server/: Cargo.toml  build.rs
crates/osproxy-server/proto/: fanout.proto
crates/osproxy-server/src/: auth.rs  bearer.rs  capture.rs  cursor.rs  cursor_tests.rs  directive.rs  directive_tests.rs  directive_wiring.rs  directives_api.rs  directives_api_tests.rs  fanout.rs  fanout_kafka_test.rs  forward_headers.rs  handler.rs  handler_tests.rs  lib.rs  log.rs  main.rs  tenancy.rs
crates/osproxy-server/tests/: breakglass_endpoint.rs  connection_load.rs  directive_admin.rs  end_to_end.rs  isolation_scaling.rs  load_matrix.rs  mode_overhead.rs  perf_harness.rs  profile_64k.rs  proxy_overhead.rs  soak.rs  streaming_memory.rs  testcontainer.rs
crates/osproxy-server/tests/common/: mod.rs
crates/osproxy-sink/: Cargo.toml
crates/osproxy-sink/src/: ack.rs  batch.rs  breaker.rs  conn.rs  error.rs  lib.rs  memory.rs  opensearch.rs  read.rs  sink.rs  trace_headers.rs  wire.rs
crates/osproxy-sink/tests/: opensearch_http.rs
crates/osproxy-spi/: Cargo.toml
crates/osproxy-spi/src/: auth.rs  decision.rs  error.rs  lib.rs  placement.rs  principal.rs  request.rs  routing.rs  rules.rs  tenancy.rs
crates/osproxy-tenancy/: Cargo.toml
crates/osproxy-tenancy/src/: lib.rs  migration.rs  placement_table.rs  resolve.rs  router.rs  router_tests.rs
crates/osproxy-tenancy/tests/: migration.rs  routing.rs
crates/osproxy-transport/: Cargo.toml  build.rs
crates/osproxy-transport/benches/: classify.rs
crates/osproxy-transport/proto/: osproxy.proto
crates/osproxy-transport/src/: admission.rs  classify.rs  grpc.rs  handler.rs  http_io.rs  lib.rs  request.rs  server.rs  tls.rs
crates/osproxy-transport/tests/: fips.rs  ingress.rs  memory.rs  mtls.rs  shutdown.rs  tls.rs
docs/: 00-goals.md  01-architecture.md  02-spi.md  03-tenancy-and-placement.md  04-request-pipeline.md  05-observability.md  06-partition-migration.md  07-fips-and-crypto.md  08-engineering-standards.md  09-testing-and-quality.md  10-review-process.md  11-roadmap.md  12-quality-system.md  13-security-model.md  14-performance.md
docs/decisions/: 001-language-rust.md  002-single-target-search.md  003-epoch-gated-migration.md  004-fips-aws-lc-rs.md  005-readonly-ai-observability.md  006-isolation-filter-or-reject.md  007-static-spi.md  008-sink-trait-deferred-redundancy.md  009-m1-tls-ring-provider.md  010-async-fanout-write-mode.md  011-traffic-capture-model.md  012-modes-dynamism-by-blast-radius.md  README.md  (+3 more)
scripts/: setup-hooks.sh
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
xtask/: Cargo.toml
xtask/src/: main.rs
(+29 files in other folders)
