[workspace]
resolver = "2"
members = [
    "crates/osproxy-core",
    "crates/osproxy-spi",
    "crates/osproxy-tenancy",
    "crates/osproxy-transport",
    "crates/osproxy-rewrite",
    "crates/osproxy-sink",
    "crates/osproxy-control",
    "crates/osproxy-observe",
    "crates/osproxy-engine",
    "crates/osproxy-config",
    "crates/osproxy-server",
    "xtask",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.94"
license = "Apache-2.0"
authors = ["Huy Nguyen"]
repository = "https://github.com/huyz0/opensearch-proxy"

[workspace.dependencies]
# Internal crates (path deps; versions track the workspace).
osproxy-core = { path = "crates/osproxy-core" }
osproxy-spi = { path = "crates/osproxy-spi" }
osproxy-tenancy = { path = "crates/osproxy-tenancy" }
osproxy-transport = { path = "crates/osproxy-transport" }
osproxy-rewrite = { path = "crates/osproxy-rewrite" }
osproxy-sink = { path = "crates/osproxy-sink" }
osproxy-control = { path = "crates/osproxy-control" }
osproxy-observe = { path = "crates/osproxy-observe" }
osproxy-engine = { path = "crates/osproxy-engine" }
osproxy-config = { path = "crates/osproxy-config" }

# Third-party (pinned conservatively; add as milestones need them).
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false }
# HTTP stack for upstream delivery and ingress. hyper-util's pooled client gives
# us TCP+TLS connection reuse (NFR-P) without hand-rolling a pool.
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false }
http-body-util = "0.1"
bytes = "1"
# Stream combinators for bounded-concurrency demux dispatch (buffer_unordered).
# Already in the tree via hyper-util; no runtime/spawn needed — just polling.
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# TLS via rustls behind the CryptoProvider seam. M1 uses the `ring` provider
# (no cmake/C toolchain needed); the FIPS-validated aws-lc-rs provider drops in
# at M6 behind the same seam (ADR-009, docs/07).
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
# Already in the tree via rustls's ring provider; used directly to fingerprint a
# verified client certificate into a stable mTLS identity.
ring = "0.17"
rcgen = "0.13"
# Live integration tests against a real OpenSearch container (the M1 exit gate).
# Requires a running Docker daemon; the tests are #[ignore]'d so CI without
# Docker stays green.
testcontainers = "0.26"

# Lints applied to every crate that opts in via `[lints] workspace = true`.
# See docs/08-engineering-standards.md. xtask deliberately does NOT opt in.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Reliability: no panics reachable from library code (NFR-R1).
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
# Structure / no-god-* budgets (docs/08). Soft (warn) so a `// JUSTIFY` review
# decision can keep them; CI greps for unjustified overflows separately.
too_many_lines = "warn"
too_many_arguments = "warn"
cognitive_complexity = "warn"
# General quality.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
