[workspace]
resolver = "2"
members = [
    "crates/osproxy-core",
    "crates/osproxy-spi",
    "crates/osproxy-tenancy",
    "crates/osproxy-transport",
    "crates/osproxy-rewrite",
    "crates/osproxy-sink",
    "crates/osproxy-control",
    "crates/osproxy-observe",
    "crates/osproxy-otlp",
    "crates/osproxy-engine",
    "crates/osproxy-config",
    "crates/osproxy-server",
    "xtask",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.94"
license = "Apache-2.0"
authors = ["Huy Nguyen"]
repository = "https://github.com/huyz0/opensearch-proxy"

[workspace.dependencies]
# Internal crates (path deps; versions track the workspace).
osproxy-core = { path = "crates/osproxy-core" }
osproxy-spi = { path = "crates/osproxy-spi" }
osproxy-tenancy = { path = "crates/osproxy-tenancy" }
# default-features off so a consumer can pick the crypto provider feature
# (`non-fips`/`fips`) without the default `non-fips` being force-unioned in.
osproxy-transport = { path = "crates/osproxy-transport", default-features = false }
osproxy-rewrite = { path = "crates/osproxy-rewrite" }
osproxy-sink = { path = "crates/osproxy-sink" }
osproxy-control = { path = "crates/osproxy-control" }
osproxy-observe = { path = "crates/osproxy-observe" }
osproxy-otlp = { path = "crates/osproxy-otlp" }
osproxy-engine = { path = "crates/osproxy-engine" }
osproxy-config = { path = "crates/osproxy-config" }

# Third-party (pinned conservatively; add as milestones need them).
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false }
# HTTP stack for upstream delivery and ingress. hyper-util's pooled client gives
# us TCP+TLS connection reuse (NFR-P) without hand-rolling a pool.
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false }
# The `Service<Uri>` trait the pooled client's connector implements; we wrap it
# to count real TCP connection opens for pool-reuse telemetry (NFR-P).
tower-service = { version = "0.3", default-features = false }
http-body-util = "0.1"
bytes = "1"
# Stream combinators for bounded-concurrency demux dispatch (buffer_unordered).
# Already in the tree via hyper-util; no runtime/spawn needed — just polling.
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# TLS via rustls behind the CryptoProvider seam. The crypto *provider* is NOT
# pinned here — osproxy-transport selects it per build feature so a FIPS artifact
# links only aws-lc-rs and a dev build links only `ring` (ADR-009, docs/07):
# transport adds `tokio-rustls/ring` (non-fips) or `tokio-rustls/fips` (fips).
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "logging"] }
# Crypto modules used directly for the mTLS cert fingerprint (SHA-256). Optional +
# feature-selected in osproxy-transport; ring for non-fips, aws-lc-rs for fips
# (its `digest` API mirrors ring's). aws-lc-rs `fips` builds AWS-LC-FIPS (cmake).
ring = "0.17"
# `fips` is intentional: this dep exists ONLY to back the FIPS crypto provider, so
# it must stay a single-consumer dep (osproxy-transport, behind `dep:aws-lc-rs`).
# A future non-FIPS use of aws-lc-rs must not inherit the AWS-LC-FIPS C build.
#
# PINNED EXACTLY (docs/07 §2.1, docs/specs/fips-boundary.md): the crate version
# determines the linked AWS-LC-FIPS *module* version, which is a tracked
# compliance fact — never a routine `cargo update`. 1.17.0 binds AWS-LC-FIPS 3.0
# (CMVP review pending / MIP list). NOTE: the module line is COUPLED to rustls —
# rustls 0.23.40 requires aws-lc-rs >=1.14 (3.0); the validated 2.0 module
# (cert #4816) needs aws-lc-rs <1.12 and therefore an older rustls. Changing this
# pin is a compliance event: update the boundary doc in the same change.
aws-lc-rs = { version = "=1.17.0", features = ["fips"] }
rcgen = "0.13"
# Local-first wall-clock micro-benchmarks (`cargo xtask bench`). divan owns its
# own timing loop, so bench code needs no banned `Instant::now`. Wall-clock is
# noisy/host-specific, so these calibrate and explore locally — they are NOT a CI
# gate; the deterministic gates are dhat (alloc counts) and, in CI where valgrind
# exists, iai-callgrind (instruction counts). (docs/12)
divan = "0.1"
# gRPC ingress (docs/11 M4). tonic serves the proxy's DocumentService over h2;
# tonic-prost is the runtime prost codec, prost the message runtime, and
# tonic-prost-build the build-time codegen (needs `protoc`). tokio-stream adapts
# a bound TcpListener into tonic's incoming-connection stream.
tonic = { version = "0.14", default-features = false, features = ["server", "router", "transport", "codegen", "channel"] }
tonic-prost = "0.14"
prost = "0.14"
tonic-prost-build = "0.14"
tokio-stream = { version = "0.1", default-features = false, features = ["net"] }
# Live integration tests against a real OpenSearch container (the M1 exit gate).
# Requires a running Docker daemon; the tests are #[ignore]'d so CI without
# Docker stays green.
testcontainers = "0.26"

# Lints applied to every crate that opts in via `[lints] workspace = true`.
# See docs/08-engineering-standards.md. xtask deliberately does NOT opt in.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Reliability: no panics reachable from library code (NFR-R1).
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
# Structure / no-god-* budgets (docs/08). Soft (warn) so a `// JUSTIFY` review
# decision can keep them; CI greps for unjustified overflows separately.
too_many_lines = "warn"
too_many_arguments = "warn"
cognitive_complexity = "warn"
# General quality.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
