[package]
name = "xtask"
description = "Build/test/lint/coverage automation for osproxy. Run via `cargo xtask <cmd>`."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

# xtask is tooling, not shipped code: it deliberately does NOT opt into the
# workspace lints (it is allowed to panic / use process::exit).
