[package]
name = "osproxy-config"
description = "Typed configuration load and validation. Produces validated value objects; no business logic."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
osproxy-core.workspace = true

[lints]
workspace = true
