[package]
name = "osproxy-config"
description = "Typed configuration load and validation. Produces validated value objects; no business logic."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# Intentionally dependency-free (std only): the loader parses a small line-based
# file and overlays env + flags into typed value objects. A full TOML/serde stack
# would be unjustified weight for ~18 string settings (docs/08 dependency budget).

[lints]
workspace = true
