[package]
name = "osproxy-control"
description = "Control plane: watched placement table and diagnostics directives with epoch versioning."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
osproxy-core.workspace = true
osproxy-spi.workspace = true
osproxy-tenancy.workspace = true
thiserror.workspace = true

[lints]
workspace = true
