[package]
name = "osproxy-engine"
description = "Pipeline orchestration: auth -> resolve -> rewrite -> sink -> reverse."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
osproxy-core.workspace = true
osproxy-spi.workspace = true
osproxy-tenancy.workspace = true
osproxy-rewrite.workspace = true
osproxy-sink.workspace = true
osproxy-control.workspace = true
osproxy-observe.workspace = true
thiserror.workspace = true
serde_json.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
proptest = "1"

[lints]
workspace = true
