[package]
name = "osproxy-kafka-rskafka"
description = "Portable, pure-Rust Kafka Producer for osproxy-kafka over rskafka + rustls. The TLS crypto provider is build-selected (ring for non-fips, FIPS aws-lc-rs for fips), so one client serves both deployment targets."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
osproxy-kafka.workspace = true
rskafka = { version = "0.6", default-features = false, features = ["transport-tls"] }
rustls = { version = "0.23", default-features = false, features = ["std"] }
tokio = { workspace = true, features = ["rt"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
# One client, both targets: the rustls crypto provider is chosen at build time,
# mirroring osproxy-transport. A FIPS artifact uses the same validated aws-lc-rs
# module as the proxy's own TLS; a dev build uses ring.
default = ["non-fips"]
non-fips = ["rustls/ring"]
fips = ["rustls/fips"]

[lints]
workspace = true
