[package]
name = "osproxy-observe"
description = "Observability: shape-only span schema, runtime diagnostics directives, /debug/explain assembly."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
osproxy-core.workspace = true
serde = { workspace = true }
serde_json.workspace = true

[lints]
workspace = true
