[package]
name = "osproxy-rewrite"
description = "Body and query transforms: bulk NDJSON demux, query-DSL filter wrapping, response field strip."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
osproxy-core.workspace = true
thiserror.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest = "1"
dhat = "0.3"

[lints]
workspace = true
