[package]
name = "osproxy-server"
description = "The osproxy binary: process lifecycle and wiring. No business logic."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "osproxy"
path = "src/main.rs"

[features]
# Crypto provider selection forwarded to osproxy-transport (ADR-009). A FIPS
# binary is built with
# `cargo build -p osproxy-server --bin osproxy --no-default-features --features fips`.
default = ["non-fips"]
# The crypto feature also selects the HMAC module the X-Debug-Directive verifier
# authenticates with, so a FIPS binary never links a non-validated primitive.
non-fips = ["osproxy-transport/non-fips", "dep:ring"]
fips = ["osproxy-transport/fips", "dep:aws-lc-rs"]

[dependencies]
osproxy-core.workspace = true
osproxy-capture.workspace = true
osproxy-config.workspace = true
osproxy-engine.workspace = true
osproxy-observe.workspace = true
osproxy-transport = { workspace = true, default-features = false }
osproxy-otlp.workspace = true
osproxy-spi.workspace = true
osproxy-tenancy.workspace = true
osproxy-sink.workspace = true
serde_json.workspace = true
ring = { workspace = true, optional = true }
aws-lc-rs = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal"] }

[dev-dependencies]
hyper = { workspace = true, features = ["server", "client", "http1"] }
hyper-util = { workspace = true, features = ["server", "service", "client", "client-legacy", "http1", "tokio"] }
http-body-util.workspace = true
bytes.workspace = true
serde_json.workspace = true
testcontainers.workspace = true
osproxy-bench.workspace = true

[lints]
workspace = true
