[package]
name = "osproxy-sink"
description = "Write sink: Sink trait + OpenSearchSink now; QueueSink (Kafka) redundancy later behind the same trait."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
osproxy-core.workspace = true
osproxy-spi.workspace = true

[lints]
workspace = true
