[package]
name = "osproxy-sink"
description = "Write sink: Sink trait + OpenSearchSink now; QueueSink (Kafka) redundancy later behind the same trait."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
osproxy-core.workspace = true
osproxy-spi.workspace = true
thiserror.workspace = true
serde_json.workspace = true
hyper = { workspace = true, features = ["client", "http1", "http2"] }
hyper-util = { workspace = true, features = ["client", "client-legacy", "http1", "http2", "tokio"] }
http-body-util.workspace = true
bytes.workspace = true
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "time"] }
hyper = { workspace = true, features = ["server", "http1", "http2"] }
hyper-util = { workspace = true, features = ["server", "server-auto", "service", "tokio"] }

[lints]
workspace = true
