[package]
name = "osproxy-spi"
description = "Public SPI traits implementers provide. Depends only on osproxy-core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
osproxy-core.workspace = true

[lints]
workspace = true
