[package]
name = "osproxy-transport"
description = "Wire I/O: HTTP/1.1, HTTP/2, gRPC ingress, upstream connection pools, TLS, CryptoProvider."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
osproxy-core.workspace = true
osproxy-spi.workspace = true
thiserror.workspace = true
hyper = { workspace = true, features = ["server", "http1"] }
hyper-util = { workspace = true, features = ["server", "service", "tokio"] }
http-body-util.workspace = true
bytes.workspace = true
tokio = { workspace = true, features = ["rt", "net"] }
tokio-rustls.workspace = true
ring.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time"] }
hyper = { workspace = true, features = ["client"] }
hyper-util = { workspace = true, features = ["client", "client-legacy", "http1", "tokio"] }
rcgen.workspace = true

[lints]
workspace = true
