[package]
name = "osproxy-transport"
description = "Wire I/O: HTTP/1.1, HTTP/2, gRPC ingress, upstream connection pools, TLS, CryptoProvider."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
osproxy-core.workspace = true
osproxy-spi.workspace = true
thiserror.workspace = true
hyper = { workspace = true, features = ["server", "http1", "http2"] }
hyper-util = { workspace = true, features = ["server", "server-auto", "service", "tokio"] }
http-body-util.workspace = true
bytes.workspace = true
tokio = { workspace = true, features = ["rt", "net"] }
tokio-rustls.workspace = true
ring.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
tokio-stream.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time"] }
hyper = { workspace = true, features = ["client"] }
hyper-util = { workspace = true, features = ["client", "client-legacy", "http1", "http2", "tokio"] }
tonic = { workspace = true, features = ["server", "router", "transport", "channel"] }
rcgen.workspace = true

[lints]
workspace = true
